[gd_scene load_steps=18 format=2]

[ext_resource path="res://Scripts/Character/Barracuda.gd" type="Script" id=1]
[ext_resource path="res://Assets/Other/Bubble_Particle.png" type="Texture" id=2]
[ext_resource path="res://Assets/Entity/Barracuda_Full.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Other/Visibilty_Box.tscn" type="PackedScene" id=4]
[ext_resource path="res://Other/Game_UI_Theme.tres" type="Theme" id=5]
[ext_resource path="res://Audio/hitBlood.mp3" type="AudioStream" id=6]
[ext_resource path="res://Audio/barracudaBite.mp3" type="AudioStream" id=7]

[sub_resource type="CapsuleShape2D" id=11]
radius = 20.0
height = 88.0

[sub_resource type="CircleShape2D" id=2]
radius = 375.0

[sub_resource type="CircleShape2D" id=3]
radius = 175.0

[sub_resource type="CapsuleShape2D" id=13]
radius = 39.9998
height = 56.0004

[sub_resource type="Curve" id=9]
_data = [ Vector2( 0, 0 ), 0.0, 11.9341, 0, 0, Vector2( 0.264045, 0.9875 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), -3.30992, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=14]
curve = SubResource( 9 )

[sub_resource type="ParticlesMaterial" id=10]
lifetime_randomness = 0.75
emission_shape = 2
emission_box_extents = Vector3( 15, 100, 1 )
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
angular_velocity = -720.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 7.5
linear_accel_random = 1.0
radial_accel = 0.06
scale = 0.35
scale_random = 0.3
scale_curve = SubResource( 14 )
color = Color( 1, 1, 1, 0.784314 )

[sub_resource type="CapsuleShape2D" id=12]
radius = 17.0
height = 86.0

[sub_resource type="Animation" id=15]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=16]
resource_name = "bite"
length = 0.6
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.05, 0.6 ),
"transitions": PoolRealArray( 1.46409, -3.605 ),
"update": 0,
"values": [ Vector2( 1.3, 0.75 ), Vector2( 1, 1 ) ]
}

[node name="Barracuda" type="KinematicBody2D" groups=["collide"]]
z_index = 6
collision_layer = 8200
collision_mask = 8
script = ExtResource( 1 )

[node name="Visibilty_Box" parent="." instance=ExtResource( 4 )]
scale = Vector2( 12.5, 12.5 )

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4
gravity_vec = Vector2( 0, 0 )
gravity = 0.0
linear_damp = 0.0
angular_damp = 0.0

[node name="Detection_Shape" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 11 )

[node name="Player_Detection" type="Area2D" parent="."]
collision_layer = 512
collision_mask = 512
gravity_vec = Vector2( 0, 0 )
gravity = 0.0
linear_damp = 0.0
angular_damp = 0.0

[node name="Detection_Shape" type="CollisionShape2D" parent="Player_Detection"]
shape = SubResource( 2 )

[node name="Player_Attack_Box" type="Area2D" parent="."]
collision_layer = 256
collision_mask = 256
gravity_vec = Vector2( 0, 0 )
gravity = 0.0
linear_damp = 0.0
angular_damp = 0.0

[node name="Detection_Shape" type="CollisionShape2D" parent="Player_Attack_Box"]
shape = SubResource( 3 )

[node name="B_Hit_Player" type="StaticBody2D" parent="."]
rotation = 1.5708
collision_mask = 16

[node name="Hit_Collision" type="CollisionShape2D" parent="B_Hit_Player"]
position = Vector2( 24, -8.7738e-05 )
rotation = 1.5708
shape = SubResource( 13 )
disabled = true

[node name="Particles2D" type="Particles2D" parent="B_Hit_Player"]
light_mask = 524290
rotation = 1.57079
z_index = -4
amount = 9
lifetime = 2.5
fixed_fps = 60
visibility_rect = Rect2( -1250, -1250, 2500, 2500 )
local_coords = false
process_material = SubResource( 10 )
texture = ExtResource( 2 )

[node name="Body_Collision" type="CollisionShape2D" parent="."]
shape = SubResource( 12 )

[node name="Sprite" type="Sprite" parent="."]
light_mask = 524290
rotation = -1.5708
texture = ExtResource( 3 )

[node name="Health_Bar" type="ProgressBar" parent="."]
light_mask = 0
margin_left = -36.0
margin_top = -40.0
margin_right = 35.0
margin_bottom = -26.0
theme = ExtResource( 5 )
value = 50.0
percent_visible = false

[node name="AudioStreamPlayer2D1" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
area_mask = 0

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
area_mask = 0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 15 )
anims/bite = SubResource( 16 )

[connection signal="viewport_entered" from="Visibilty_Box" to="." method="_on_Visibilty_Box_viewport_entered"]
[connection signal="viewport_exited" from="Visibilty_Box" to="." method="_on_Visibilty_Box_viewport_exited"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
[connection signal="body_entered" from="Player_Detection" to="." method="_on_Player_Detection_body_entered"]
[connection signal="body_exited" from="Player_Detection" to="." method="_on_Player_Detection_body_exited"]
[connection signal="body_entered" from="Player_Attack_Box" to="." method="_on_Player_Attack_Box_body_entered"]
